Add project page, & minor fixes

--- a/views/projects.hbs
+++ b/views/projects.hbs
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Home</title>
+    <title>Projects</title>
 </head>
 <body>
     {{> header }}
-    <p>{{ screamIt welcomeMessage }}</p>
+    <p>{{ pageTitle }}</p>
 
     {{> footer }}
 </body>
